tests/integration/errors/test_interceptor_wrong_second_param.sn
# Error test: interceptor handler with wrong second parameter type

fn badHandler(name: str, args: int[], continue_fn: fn(): any): any =>
    return continue_fn()

fn main(): void =>
    Interceptor.register(badHandler)
